// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render 1`] = `
<button
  className="button-primary button-medium"
  onClick={undefined}
>
  Hello
</button>
`;

exports[`Button component should render with customization 1`] = `
<button
  className="button-danger button-large custom_class"
  onClick={undefined}
>
  Hello
</button>
`;
